# erlkoenig

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  rebar.config
.github/workflows/: ci.yml  docs.yml  kernel.yml  release.yml
apps/erlkoenig/config/: sys.config  vm.args  vm.args.src
apps/erlkoenig/include/: erlkoenig_error.hrl  nft_constants.hrl
apps/erlkoenig/src/: ek.erl  ek_event_printer.erl  erlkoenig.app.src  erlkoenig.erl  erlkoenig_admission.erl  erlkoenig_amqp_codec.erl  erlkoenig_amqp_conn.erl  erlkoenig_amqp_forwarder.erl  erlkoenig_amqp_nft_sub.erl  erlkoenig_amqp_publisher.erl  erlkoenig_amqp_sup.erl  erlkoenig_app.erl  erlkoenig_artifact_store.erl  erlkoenig_audit.erl  erlkoenig_bridge.erl  (+60 more)
apps/erlkoenig_nft/: README.md
c-runtime/: erlkoenig_bpf.h  erlkoenig_buf.h  erlkoenig_caps.h  erlkoenig_cleanup.h  erlkoenig_devfilter.c  erlkoenig_devfilter.h  erlkoenig_log.h  erlkoenig_metrics.c  erlkoenig_metrics.h  erlkoenig_netcfg.c  erlkoenig_netcfg.h  erlkoenig_nodecert.c  erlkoenig_nodecert.h  erlkoenig_ns.c  erlkoenig_ns.h  erlkoenig_ns_internal.h  erlkoenig_proto.h  erlkoenig_rt.c  erlkoenig_seccomp.h
c-runtime/demo/: hello_output.c
c-runtime/test/: test_container_setup.c
demos/api-server/: go.mod  main.go
demos/echo-server/: go.mod  main.go
demos/reverse-proxy/: go.mod  main.go
doc/book/: 01-overview.md  02-installation.md  03-first-container.md  04-containers.md  05-networking.md  06-firewall.md  07-threat-detection.md  08-persistent-volumes.md  09-observability.md  10-pki-signatures.md  11-logging.md  12-runtime-architecture.md  13-elf-analysis.md  14-netlink-transport.md  15-volume-backing-ops.md  16-supervision-and-admission.md  17-property-based-testing.md  18-operator-cli.md  README.md
docs/: AMQP.md  ARCHITECTURE.md  BUILD.md  DASHBOARD.md  FIREWALL.md  INSTALL.md  NETLINK.md  ROADMAP.md  SPEC-MERGE.md  STATIC_BINARIES.md  documentation-plan.md
dsl/: erlkoenig  mix.exs
dsl/examples/: caddy_proxy.ek  caddy_proxy.exs  custom_firewall.exs  fuse_rootfs.exs  hardened_worker.exs  live_test.exs  microservice_cluster.ek  microservice_cluster.exs  multi_zone.exs  observed_stack.exs  observed_stack.term  paranoid_payment.exs  persistent_archive.exs  public_bastion.exs  signed_echo.exs  simple_echo.ek  simple_echo.exs  three_tier.exs  three_tier_live.ek  three_tier_live.exs  web_cluster.ek  web_cluster.exs
dsl/guides/: containers.md  elf-analysis.md  firewall.md  installation.md  logging.md  netlink-transport.md  networking.md  observability.md  overview.md  pki-signatures.md  threat-detection.md
dsl/test/: config_roundtrip_test.exs  container_dsl_test.exs  container_test.exs  dsl_test.exs  examples_test.exs  firewall_dsl_test.exs  firewall_test.exs  guard_test.exs  host_ipvlan_test.exs  limits_dsl_test.exs  limits_test.exs  mix_tasks_test.exs  nft_dsl_test.exs  pki_sig_test.exs  stack_test.exs  watch_test.exs
examples/: 02_conntrack.scenario.term  05_multi_chain.scenario.term  05_multi_chain.term  anti_spoofing.exs  bench_spawn.exs  caddy_proxy.exs  database_server.exs  default.exs  dev_server.exs  dns_server.exs  docker_host.exs  fw_bastion.exs  fw_database.exs  fw_flowtable.exs  fw_nat_gateway.exs  fw_web_server.exs  game_server.exs  hardened_volumes.exs  hardened_webserver.exs  hardened_webserver.term  hardened_worker.exs  ids_gateway.exs  ipvlan_echo.exs  ipvlan_smoke.exs  lambda_workers.exs  live_test.exs  logged_echo.exs  mail_server.exs  microservice_cluster.exs  minimal_volume_opts.exs  nat_router.exs  persistent_archive.exs  pg_demo.exs  pod_firewall.exs  pod_strategies.exs  pod_supervision.exs  rate_limiter.exs  reverse_proxy.exs  risk_scorer.exs  service_mesh.exs  (+17 more)
examples/archive/: fuse_rootfs.exs  multi_zone.exs  observed_stack.exs  paranoid_payment.exs  public_bastion.exs  risk_scorer.exs  signed_echo.exs  three_tier_bridges.exs  three_tier_live.exs
examples/scenarios/: 01_minimal.scenario.term  01_minimal.term  02_conntrack.term  03_sets.scenario.term  03_sets.term  04_logging.scenario.term  04_logging.term  06_protocols.scenario.term  06_protocols.term  anti_spoofing.term  three_tier.term  webserver.scenario.term
integration-tests/: 01_lifecycle.escript  02_networking.escript  03_port_forwarding.escript  04_memory_limit.escript  05_pid_limit.escript  06_restart.escript  07_seccomp.escript  08_file_injection.escript  09_dns.escript  10_firewall.escript  11_output.escript  12_protocol.escript  13_net_setup.escript  14_pty.escript  15_dsl_config.escript  16_proc_masking.escript  17_signature.escript  18_bind_mount_volume.escript  19_cgroup_topology.escript  20_beam_survives_oom.escript  run_all.sh  test_helper.erl
packaging/: APKBUILD  PKGBUILD  activate  erlkoenig-rt.post-install  erlkoenig.service  install.sh
scripts/: bootstrap-server.sh  install.sh  runtime-explained.sh  verify-deploy.sh  vm-backup.sh  vm-restore.sh
stories/secure-doc-sign/: .gitignore  README.md  SICHERHEITSKONZEPT.md  build.sh  go.mod  stack.exs
tests/integration/: 01_lifecycle.escript  03_port_forwarding.escript  04_memory_limit.escript  05_pid_limit.escript  06_restart.escript  07_seccomp.escript  08_file_injection.escript  09_dns.escript  10_firewall.escript  11_output.escript  12_protocol.escript  13_net_setup.escript  14_pty.escript  15_dsl_config.escript  16_proc_masking.escript  18_bind_mount_volume.escript  19_cgroup_topology.escript  21_e2e_full_stack.escript  22_pki_container.escript  23_ipvlan.escript  24_container_nft.escript  24_tier_isolation.escript  25_volume_mount_opts.escript  26_dsl_volume_opts.escript  27_ephemeral_volume_cleanup.escript  28_tutorial_lifecycle.escript  29_pod_strategies.escript  30_zones_dns_l2.escript  31_host_firewall_scenarios.escript  32_pod_strategies.escript  33_flowtable_offload.escript  34_volume_lifecycle.escript  35_honeypot_empty_default.escript  36_volume_ownership_reconcile.escript  37_quarantine_cli_roundtrip.escript  e2e_test_21.erl  nft-run-tests.sh  run_all.sh  test_helper.erl
tools/: dashboard.py  event_consumer.py  stream_consumer.py
(+316 files in other folders)
